# datum-server

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPLETED.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  UNIT_TEST_RESULTS.md  build_all.sh  datum-server.example.yaml  go.mod  go.sum  implementation_plan.md  load_test_users.json  run_deploy.sh  stream_viewer.html  walkthrough.md
external_sources/EdgeIntelligenceFramework/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  build_log.txt  generate_coverage_report.sh  library.properties  requirements.txt
external_sources/EdgeIntelligenceFramework/.github/workflows/: ci.yml
external_sources/EdgeIntelligenceFramework/arduino/EIF/: README.md  keywords.txt  library.properties
external_sources/EdgeIntelligenceFramework/arduino/GestureController/: GestureController.ino
external_sources/EdgeIntelligenceFramework/bf/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/bf/include/: eif_bayesian.h  eif_bayesian_fixed.h  eif_bf_hmm.h  eif_bf_kalman.h  eif_bf_particle.h  eif_bf_slam.h  eif_imu.h
external_sources/EdgeIntelligenceFramework/bf/src/: eif_bayesian.c  eif_bayesian_fixed.c  eif_bf_hmm.c  eif_imu.c  eif_slam.c
external_sources/EdgeIntelligenceFramework/core/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/core/include/: eif_assert.h  eif_async.h  eif_benchmark.h  eif_core.h  eif_fixedpoint.h  eif_generic.h  eif_logging.h  eif_matrix.h  eif_matrix_fixed.h  eif_memory.h  eif_memory_guard.h  eif_power.h  eif_status.h  eif_types.h  eif_version.h  eif_version.h.in
external_sources/EdgeIntelligenceFramework/core/src/: eif_async.c  eif_fixedpoint.c  eif_logging.c  eif_matrix.c  eif_matrix_fixed.c  eif_matrix_ops_simd.c  eif_memory.c  eif_power.c
external_sources/EdgeIntelligenceFramework/cv/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/cv/include/: eif_cv.h  eif_cv_detect.h  eif_cv_feature.h  eif_cv_filter.h  eif_cv_haar.h  eif_cv_image.h  eif_cv_io.h  eif_cv_morph.h  eif_cv_track.h
external_sources/EdgeIntelligenceFramework/cv/src/: eif_cv_detect.c  eif_cv_feature.c  eif_cv_filter.c  eif_cv_haar.c  eif_cv_morph.c  eif_cv_track.c
external_sources/EdgeIntelligenceFramework/cv/tests/: test_cv.c  test_cv_coverage.c  test_cv_filter_coverage.c
external_sources/EdgeIntelligenceFramework/da/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/da/include/: eif_anomaly.h  eif_data.h  eif_data_analysis.h  eif_matrix_profile.h  eif_matrix_profile_fixed.h  eif_ts.h  eif_ts_dtw_fixed.h  eif_ts_hw_fixed.h
external_sources/EdgeIntelligenceFramework/da/src/: eif_anomaly.c  eif_data_analysis.c  eif_learning.c  eif_matrix_profile.c  eif_matrix_profile_fixed.c  eif_ts_arima.c  eif_ts_dtw.c  eif_ts_dtw_fixed.c  eif_ts_extensions.c  eif_ts_hw.c  eif_ts_hw_fixed.c
external_sources/EdgeIntelligenceFramework/dl/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/dl/include/: eif_edge_inference.h  eif_model.h  eif_model_export.h  eif_neural.h  eif_nn_arena.h  eif_nn_attention.h  eif_nn_context.h  eif_nn_graph.h  eif_nn_inference.h  eif_nn_layers.h  eif_nn_model.h  eif_nn_pruning.h  eif_nn_rnn.h  eif_nn_train.h  eif_nn_transformer.h  eif_nn_types.h  eif_quantize.h
external_sources/EdgeIntelligenceFramework/dl/src/: eif_dl_activations.c  eif_dl_context.c  eif_dl_core.c  eif_dl_im2col.c  eif_dl_internal.h  eif_dl_layers.c  eif_dl_model_loader.c  eif_dl_ops_simd.c  eif_dl_quantization.c  eif_dl_rnn.c  eif_dl_train.c
external_sources/EdgeIntelligenceFramework/docs/: README.md
external_sources/EdgeIntelligenceFramework/docs/guides/: MODEL_CONVERSION_TUTORIAL.md  ONNX_COMPATIBILITY.md  SUPPORTED_LAYERS.md  opus_integration.md
external_sources/EdgeIntelligenceFramework/docs/manual/: GETTING_STARTED.md
external_sources/EdgeIntelligenceFramework/docs/meta/: CHANGELOG.md  DEMOS.md  DESIGN_NOTES.md  EU_AI_ACT_COMPLIANCE.md  FAQ.md  SECURITY.md
external_sources/EdgeIntelligenceFramework/docs/reference/: ALGORITHMS.md  API_REFERENCE.md  BENCHMARKS.md  LIBRARY_COMPARISON.md
external_sources/EdgeIntelligenceFramework/docs/reports/: AVX2_OPTIMIZATION_REPORT.md  BENCHMARK_REPORT.md  BLOG_DRAFT.md  COVERAGE_IMPROVEMENT_REPORT.md  FINAL_COVERAGE_REPORT.md  FINAL_REPORT.md  FIXED_POINT_COMPLETION_REPORT.md  LESSONS_LEARNED.md  ML_AI_ENHANCEMENTS.md  QUANTIZATION_REPORT.md
external_sources/EdgeIntelligenceFramework/docs/templates/: MODEL_CARD_TEMPLATE.md  base.html  index.html  tutorial.html
external_sources/EdgeIntelligenceFramework/docs/tutorials/: AI_FEATURES_TUTORIAL.md  ARDUINO_TUTORIAL.md  CV_HAAR.md  (+4 more)
external_sources/EdgeIntelligenceFramework/dsp/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/el/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/examples/: CMakeLists.txt  README.md  TUTORIALS.md
external_sources/EdgeIntelligenceFramework/hal/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/ml/: CMakeLists.txt  README.md
external_sources/EdgeIntelligenceFramework/models/: README.md  activity_recognition.eif  activity_recognition_test.npy  gesture_nn.eif  gesture_nn_int8_quant_stats.json  kws_model.eif  mnist_cnn.eif
external_sources/EdgeIntelligenceFramework/nlp/: CMakeLists.txt
external_sources/EdgeIntelligenceFramework/src/: EdgeIntelligenceFramework.h
external_sources/EdgeIntelligenceFramework/tests/: CMakeLists.txt  main.c  run_tests.sh  test_mobilenet_runtime  test_mobilenet_runtime.c  test_mobilenet_runtime_avx2  test_quantization.c
external_sources/EdgeIntelligenceFramework/tools/: README.md  cv_viewer.py  cv_visualizer.py  eif_plotter.py  generate_docs.py  generate_mobilenet_block.py  generate_models.py  pytorch_to_eif.py  quantize_model.py  tflite_to_eif.py  train_activity_model.py  validate_model.py
libraries/python/: README.md  pyproject.toml
libraries/python/datum_iot/: __init__.py  auth.py  client.py  data.py  devices.py  exceptions.py
(+1173 files in other folders)
