[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "datum-iot"
version = "1.3.0"
description = "Python client library for the Datum IoT Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["iot", "mqtt", "datum", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/tevfik/datum-server"
Repository = "https://github.com/tevfik/datum-server"
