# examples CMakeLists.txt

# API Tests - Low-level verification
add_subdirectory(api_tests)

# Demo Categories
add_subdirectory(core_demos)    # Core utilities and benchmarks
add_subdirectory(ml_demos)      # Machine Learning demos
add_subdirectory(dsp_demos)     # Signal Processing demos
add_subdirectory(ai_demos)      # Neural Network & RL demos
add_subdirectory(api_demos)     # Structured API demos
add_subdirectory(dl_demos)      # Deep Learning (RNN, Attention) demos
add_subdirectory(filter_demos)  # Bayesian Filter demos
add_subdirectory(cv_demos)      # Computer Vision demos
add_subdirectory(nlp_demos)     # NLP demos
add_subdirectory(el_demos)      # Edge Learning demos
add_subdirectory(eval_demos)    # Model evaluation demos
add_subdirectory(da_demos)      # Data Analysis demos
add_subdirectory(bf_demos)      # Bayesian Filter demos
add_subdirectory(hw_demos)      # Hardware (ESP32) demos
add_subdirectory(rnn_demos)     # RNN/LSTM sequence demos
add_subdirectory(projects)      # Complete project templates
add_subdirectory(templates)     # Interactive templates
add_subdirectory(benchmark_demos) # Performance benchmarks
