# DSP Demos CMakeLists.txt

add_subdirectory(signal_analysis)
add_subdirectory(audio_classifier)
add_subdirectory(kws_demo)
add_subdirectory(audio_eq)
add_subdirectory(audio_pipeline)

add_subdirectory(pid_sim)
add_subdirectory(pid_interactive)
add_subdirectory(pid_fixed)
add_subdirectory(smooth_filters)
add_subdirectory(control_systems)
add_subdirectory(biquad_eq)
add_subdirectory(fir_filter)
add_subdirectory(filter_benchmark)



