# ML Demos CMakeLists.txt

add_subdirectory(ml_algorithms)
add_subdirectory(matrix_profile)
add_subdirectory(time_series)
add_subdirectory(anomaly_detector)
add_subdirectory(anomaly_detection)
add_subdirectory(power_profiler)
add_subdirectory(edge_learning)
add_subdirectory(bearing_fault)
add_subdirectory(knn_classify)
add_subdirectory(edge_intelligence)
add_subdirectory(activity_recognition)
add_subdirectory(predictive_maintenance)
add_subdirectory(gesture_demo)
add_subdirectory(wake_word_demo)
add_subdirectory(incremental_learning)
add_subdirectory(kmeans_clustering)







